<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permission_required">Permission required</string>
    <string name="grant">Grant</string>
    <string name="about">About</string>
    <string name="view_license">View License</string>
    <string name="select_item">Select Item</string>
    <string name="exception_dialog_title">An exception has been thrown!</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="keycode">Keycode</string>
    <string name="alignment">Alignment</string>
    <string name="size">Size</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="left">Left</string>
    <string name="left_and_bottom">"Left &amp; Bottom"</string>
    <string name="right">Right</string>
    <string name="right_and_bottom">"Right &amp; Bottom"</string>
    <string name="margin_x">Margin X</string>
    <string name="margin_y">Margin Y</string>
    <string name="auto">Auto</string>
    <string name="custom">Custom</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="saving">Saving&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="button">Button</string>
    <string name="dp">dp</string>
    <string name="json_extension">.json</string>
    <string name="name_blank_error">Name cannot be blank</string>
</resources>